# NovusCore-Service

./: CMakeLists.txt
service/: ConsoleCommands.h  EngineLoop.cpp  EngineLoop.h  defines.h  main.cpp
service/ConsoleCommands/: AccountCommand.h
service/ECS/Components/: InitializeWorldState.h  JustSpawned.h  Transform.h
service/ECS/Components/Network/: ConnectionComponent.h  ConnectionDeferredSingleton.h  InitializedConnection.h  LoadBalanceSingleton.h
service/ECS/Systems/Network/: ConnectionSystems.cpp  ConnectionSystems.h  InitializePlayerSystem.cpp
service/Network/: MessageHandler.cpp  MessageHandler.h  NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h  Opcodes.h
service/Network/Handlers/Auth/: AuthHandlers.cpp  AuthHandlers.h
service/Network/Handlers/General/: GeneralHandlers.cpp  (+1 more)
service/Utils/: EntityUtils.cpp  EntityUtils.h  ServiceLocator.cpp  ServiceLocator.h
src/: CMakeLists.txt  ConsoleCommands.h  EngineLoop.cpp  EngineLoop.h
src/ConsoleCommands/: AccountCommand.h
src/ECS/Components/: Transform.h
src/ECS/Components/Network/: ConnectionComponent.h  ConnectionDeferredSingleton.h  HasServerInformation.h  LoadBalanceSingleton.h
src/ECS/Components/Singletons/: DBSingleton.h
src/ECS/Systems/Network/: ConnectionSystems.cpp  ConnectionSystems.h  InitializePlayerSystem.cpp  InitializePlayerSystem.h
src/Network/Handlers/Auth/: AuthHandlers.cpp  AuthHandlers.h
src/Network/Handlers/General/: GeneralHandlers.cpp  GeneralHandlers.h
src/Utils/: EntityUtils.cpp  EntityUtils.h  ServiceLocator.cpp  ServiceLocator.h
(+4 files in other folders)
